fix: opening an irregular verb from the library threw
VocabView collected the six tense lists with List.of(...), which rejects null.
The parser returns null for the tenses it cannot generate — every tense but
Präsens for irregular verbs such as "esse" and "non iam" — so opening either
word from the library threw a NullPointerException before the per-column null
guard in the row loop could run. Arrays.asList tolerates the nulls, and that
guard then renders the missing tenses as empty cells.

Add NavigationSmokeTest, which clicks through the start page, both lesson
pickers, the library and the memory board: 135 clicks. FxmlSmokeTest only
proves a screen can be constructed, so a handler that throws on the way in
slips past it — this is what caught the bug above.

Its first version reported far fewer clicks than there are buttons, because
a ScrollPane keeps its content out of getChildrenUnmodifiable() and the two
lesson pickers therefore looked empty. The traversal now descends into it.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>